--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.3
+
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=0.1.1
+mod_version=0.1.2
 maven_group=ca.bungo.sneakyqol
 archives_base_name=sneakyqol
 
-# Dependencies
-fabric_version=0.100.4+1.20.6
+# Fabric API
+fabric_version=0.100.7+1.21
